<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dev.iostuff</groupId>
  <artifactId>dcafs</artifactId>
  <version>2.8.0</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>src/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<!-- Build an executable JAR -->
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>dcafs_lib/</classpathPrefix>
							<mainClass>das.DAS</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>./</Class-Path>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/dcafs_lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
  <dependencies>
	  <!-- https://mvnrepository.com/artifact/org.json/json -->
	  <dependency>
		  <groupId>org.json</groupId>
		  <artifactId>json</artifactId>
		  <version>20231013</version>
	  </dependency>
	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
	  <dependency>
		  <groupId>com.sun.mail</groupId>
		  <artifactId>javax.mail</artifactId>
		  <version>1.6.2</version>
	  </dependency>
	  <dependency>
		  <groupId>javax.activation</groupId>
		  <artifactId>activation</artifactId>
		  <version>1.1.1</version>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/io.netty/netty-common -->
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-common</artifactId>
		  <version>4.1.101.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-buffer</artifactId>
		  <version>4.1.101.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-transport</artifactId>
		  <version>4.1.101.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-handler</artifactId>
		  <version>4.1.101.Final</version>
	  </dependency>
	  <dependency>
		  <groupId>io.netty</groupId>
		  <artifactId>netty-codec</artifactId>
		  <version>4.1.101.Final</version>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
	  <dependency>
		  <groupId>com.microsoft.sqlserver</groupId>
		  <artifactId>mssql-jdbc</artifactId>
		  <version>12.4.2.jre11</version>
  	</dependency>
	<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
	<dependency>
		<groupId>org.xerial</groupId>
		<artifactId>sqlite-jdbc</artifactId>
		<version>3.43.0.0</version> <!-- higher version give slf4j warning/issue at startup -->
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
	<dependency>
		<groupId>com.fazecast</groupId>
		<artifactId>jSerialComm</artifactId>
		<version>2.10.3</version>
	</dependency>
	  <!-- https://mvnrepository.com/artifact/com.diozero/diozero-core -->
	  <dependency>
		  <groupId>com.diozero</groupId>
		  <artifactId>diozero-core</artifactId>
		  <version>1.3.5</version>
	  </dependency>
	<!-- https://mvnrepository.com/artifact/org.tinylog/tinylog-api -->
	<dependency>
		<groupId>org.tinylog</groupId>
		<artifactId>tinylog-api</artifactId>
		<version>2.6.2</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-lang3</artifactId>
		<version>3.12.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
	<dependency>
		<groupId>org.mariadb.jdbc</groupId>
		<artifactId>mariadb-java-client</artifactId>
		<version>3.0.10</version>
		<!-- Sticking to this version till there's a reason to update, because latest adds 4MB to libs -->
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
	<dependency>
		<groupId>org.eclipse.paho</groupId>
		<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
		<version>1.2.5</version>
	</dependency>
	  <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
	  <dependency>
		  <groupId>org.postgresql</groupId>
		  <artifactId>postgresql</artifactId>
		  <version>42.6.0</version>
	  </dependency>
  </dependencies>
</project>
